--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Typescript Node.js API",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "yarn build && node dist/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/julianodepaula/curso/issues"
   },
-  "homepage": "https://github.com/julianodepaula/curso#readme"
+  "homepage": "https://github.com/julianodepaula/curso#readme",
+  "devDependencies": {
+    "@types/module-alias": "^2.0.1",
+    "@types/node": "^16.11.12",
+    "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "module-alias": "^2.2.2"
+  }
 }
